style.css
/* ... */
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
  overflow: auto;
  width: 100vw;
  height: auto;
}

.orange {
  color: #fff;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-size: 17px;
  font-weight: 700;
  padding: 10px 20px 10px 0;
  border: none;
  justify-content: center;
  text-align: center;
}

.light {
  color: #091e42;
  border: #8993a4 1px solid;
  padding: 10px 12px 10px 12px;
  font-family: 'Inter', sans-serif;
}

.smoke {
  border: #8993a4 1px solid;
  color: #fbf8f7;
  padding: 10px 12px 10px 12px;
  font-family: 'Inter', sans-serif;
  background-color: rgba(255, 255, 255, 0.3);
}

#texttitle {
  font-family: 'Crete Round', serif;
  color: #1c1a19;
  font-size: 52px;
  font-weight: 200;
  padding: 25px 10px 50px 0;
  border-bottom: #212121 1px solid;
  margin-bottom: 50px;
}

.mywork {
  padding: 30px;
  height: auto;
  display: flex;
  justify-content: flex-end;
  align-items: stretch;
}

.projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0;
}

#imageindex {
  width: 450px;
  height: 350px;
}

#textsubtitle {
  font-family: 'Crete Round', serif;
  font-size: 32px;
  font-weight: 200;
  letter-spacing: 0.14rem;
  color: #091e42;
  padding: 20px 50px 20px 0;
}

#textparagraph {
  font-family: 'Inter', sans-serif;
  text-align: left;
  padding: 20px 50px 20px 0;
  color: #091e42;
  letter-spacing: 2px;
  line-height: 1.8;
}

.buttonsmywork {
  display: grid;
  grid-gap: 15px;
  grid-template-columns: 55px 0.15fr 0.15fr 0.15fr;
  grid-template-rows: 40px;
}

.card {
  display: flex;
  flex-direction: column;
  background-image: url("./img/card.background.png"), linear-gradient(#3c3a39 20%, #1c1a19);
  background-repeat: no-repeat;
  background-size: cover;
  padding: 20px;
  height: 500px;
  color: rgba(255, 255, 255, 1);
  max-width: 328px;
}

.seeproject {
  display: grid;
  grid-template-columns: 0.25fr 0.15fr 0.2fr 0.2fr;
  grid-template-rows: 40px;
}

.projecttitle {
  font-family: 'Crete Round', serif;
  font-size: 44px;
  font-weight: 200;
  letter-spacing: 0.14rem;
  padding: 20px 50px 20px 0;
}

.projecttext {
  font-family: 'Inter', sans-serif;
  text-align: left;
  padding: 20px 50px 20px 0;
  letter-spacing: 2px;
  line-height: 1.8;
  font-weight: 200;
}

.buttonsproject {
  display: grid;
  grid-gap: 15px;
  grid-template-columns: 0.15fr 0.2fr 0.2fr 0.2fr;
  grid-template-rows: 50px;
}

.cardbottom {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  cursor: pointer;
}

.orangebottom {
  color: #fff;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-size: 17px;
  font-weight: 700;
  padding: 10px 20px 10px 12px;
  border: none;
  justify-content: center;
  grid-column: 1 / -1;
}

.cards {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 1fr;
  grid-auto-flow: row;
  height: auto;
  padding: 5vh 1vw 5vh 1vw;
}

.language {
  background-color: #1c1a19;
  display: flex;
  height: auto;
  flex-direction: column;
  align-items: center;
  width: 100vw;
}

.skills {
  color: #fff;
  font-size: 55px;
  font-family: 'Inter', sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.skillstitle {
  display: flex;
  align-items: center;
  padding: 20px;
  order: -1;
}

.skillstitletext {
  padding: 20px;
  font-size: 40px;
}

.skills-img {
  order: -2;
  width: 20px;
  height: 20px;
}

.skilllistcontainer {
  order: -1;
  padding: 0;
  margin: 0;
}

.skillitem {
  font-size: 30px;
  font-family: 'Crete Round', serif;
  justify-content: center;
  text-align: center;
  color: rgb(255, 255, 255);
  padding: 10px;
  font-weight: 200;
}

.contactme {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 30px;
  margin: 1vh;
}

.contactinput {
  border-style: hidden;
  border-bottom: solid 1px #ccc;
  background-color: rgb(255, 255, 255);
  padding-top: 25px;
  margin-top: 30px;
  text-indent: 20px;
  padding-bottom: 20px;
}

input:focus {
  border: none;
}

::placeholder {
  font-size: 15px;
}

textarea {
  border-top-style: hidden;
  border-right-style: hidden;
  border-left-style: hidden;
  border-bottom-style: hidden;
  color: rgb(0, 0, 0);
  background-color: #fbf8f7;
  margin-top: 50px;
  text-indent: 20px;
  font-size: 20px;
  padding-top: 25px;
}

#formtitle {
  font-size: 30px;
  font-family: 'Crete Round', serif;
  text-align: center;
  color: #172b4d;
  padding: 90vh 0 0 0;
}

textarea:hover {
  background-color: #ccc;
}

#footericons {
  -webkit-filter: invert(60%);
  padding: 40px;
  display: flex;
}

#getintouch {
  width: 50vw;
  color: #fff;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-size: 25px;
  margin: 20px 15vw 20px 15vw;
  padding: 15px 10px 15px 10px;
  border: none;
  cursor: pointer;
  z-index: 500;
}

.menuitem.active {
  color: #fff;
  margin: 5vh;
  padding-bottom: 3vh;
  border-bottom: solid 2px;
  border-color: rgba(255, 255, 255, 0.5);
  font-family: 'roboto', sans-serif;
  font-weight: bolder;
  font-size: 2rem;
}

.displaymenu.active {
  display: block;
  flex-direction: column;
  align-items: flex-end;
  margin-top: 10vh;
  text-align: center;
  justify-content: space-around;
}

#getintouch:focus {
  background-color: #a14300;
}
/* ... */

